--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>KAL ART ARCHIVE</title>
-  <link rel="stylesheet" href="decoration.css">
+  <link rel="stylesheet" href="/css/decoration.css">
 </head>
 
 <body>
